--- a/index.html
+++ b/index.html
@@ -26,8 +26,39 @@
     <div class='container'>
       <div class='content'>
         <div class='row'>
-          <div class='span9'></div>
-          <div class='span3'></div>
+          <img src='' />
+        </div>
+        <div class='row'>
+          <div class='span12'>
+            <h2>
+              About
+            </h2>
+          </div>
+        </div>
+        <div class='row'>
+          <div class='span6'>
+            <h3>
+              会場
+            </h3>
+            未定
+            <h3>
+              Date
+            </h3>
+            2012/3/23(土)
+            <h3>
+              Schedule
+            </h3>
+            未定
+          </div>
+          <div class='span6'>
+            <h3>
+              Ragistration
+            </h3>
+            未定
+            <h3>
+              Coach
+            </h3>
+          </div>
         </div>
       </div>
       <footer>
