add About message by igaiga555

--- a/index.html
+++ b/index.html
@@ -26,13 +26,16 @@
     <div class='container'>
       <div class='content'>
         <div class='row'>
-          <img src='' />
+          <img src='http://dummyimage.com/960x300/fff/C9531E&amp;text=topimages' />
         </div>
         <div class='row'>
           <div class='span12'>
             <h2>
-              About
+              Rails寺子屋とは
             </h2>
+            <p>
+              Rails寺子屋はWebアプリを作るための強力なツール"Ruby on Rails"を使ってWebアプリ作りを実践しながら学ぶイベントです。日頃からRailsを使って開発している師範（コーチ）と、ほかの参加者のみなさんと、一緒にWebアプリ作りをはじめてみませんか。
+            </p>
           </div>
         </div>
         <div class='row'>
