書道APIで返ってきたロゴを切り出してトップページに表示させた

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class='container'>
       <div class='content'>
         <div class='row'>
-          <img src='http://dummyimage.com/960x300/fff/C9531E&amp;text=topimages' />
+          <img src='src/assets/images/logo.jpg' />
         </div>
         <div class='row'>
           <div class='span12'>
