--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src='https://maps.google.com/maps/api/js?sensor=true'></script>
     <script src='src/assets/gmaps.js'></script>
     <link href='style.css' rel='stylesheet' />
+    <link href='src/assets/images/favicon.ico' rel='shortcut icon' />
   </head>
   <body>
     <div class='navbar navbar-fixed-top'>
