replace english words to japanese

--- a/index.html
+++ b/index.html
@@ -45,23 +45,23 @@
             </h3>
             未定
             <h3>
-              Date
+              日時
             </h3>
             2012/3/23(土)
             <h3>
-              Schedule
+              時間割
             </h3>
             未定
           </div>
           <div class='span6'>
             <h3>
-              Registration
+              参加登録
             </h3>
             <button class='btn btn-large btn-primary disabled' type='button'>Register</button>
             <span class='muted'>Registration is closed now.</span>
             <br />
             <h3>
-              FAQ
+              よくある質問
             </h3>
             <h5>参加費はどのくらいかかりますか？</h5>
             無料です。申し込むときにはわくわくした気持ちだけあればいいです。
@@ -70,7 +70,7 @@
             <h5>プログラミングの経験があります。手伝うことはできますか？</h5>
             Rails寺子屋は師範になれる人を捜しています。連絡先にてご連絡ください。
             <h3>
-              Coach
+              師範
             </h3>
             <div class='row'>
               <div class='span3'>
