--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <h5>当日までにやっておくと良いことはありますか？</h5>
             特にありません。当日、忘れ物をしないようにして下さい！
             <h5>プログラミングの経験があります。手伝うことはできますか？</h5>
-            Rails寺子屋は師範になれる人を捜しています。連絡先にてご連絡ください。
+            Rails寺子屋は師範になれる人を捜しています。いずれかの師範までご連絡ください。
             <h3>
               師範
             </h3>
