add start time into date

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <h3>
               日時
             </h3>
-            2012/3/23(土)
+            2012/3/23(土) 10:00 開始予定
             <h3>
               時間割
             </h3>
