add  x kosenconf  and adjust informations

--- a/index.html
+++ b/index.html
@@ -41,17 +41,24 @@
         <div class='row'>
           <div class='span6'>
             <h3>
-              会場
+              Rails寺子屋 x 高専カンファレンス
             </h3>
-            未定
             <h3>
               日時
             </h3>
             2012/3/23(土) 10:00 開始予定
             <h3>
+              会場
+            </h3>
+            未定(東京近郊)
+            <h3>
               時間割
             </h3>
             未定
+            <h3>
+              参加対象者
+            </h3>
+            高専学生、卒業生、教職員
           </div>
           <div class='span6'>
             <h3>
