Add credit of '書道API'

--- a/index.html
+++ b/index.html
@@ -98,6 +98,15 @@
                 <a href='https://twitter.com/mrkn'>@mrkn</a>
               </div>
             </div>
+            <h3>
+              題字
+            </h3>
+            <div class='row'>
+              <div class='span3'>
+                <h4>さいとう かずよし</h4>
+                <a href='https://twitter.com/kazuyoshi'>@kazuyoshi</a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
