Adjust TERAKOYA taste

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
             <h3>
               参加登録
             </h3>
-            <button class='btn btn-large btn-primary disabled' type='button'>Register</button>
-            <span class='muted'>Registration is closed now.</span>
+            <button class='btn btn-large btn-primary disabled' type='button'>門を叩く</button>
+            <span class='muted'>(準備中)</span>
             <br />
             <h3>
               よくある質問
