Add OGP information

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Rails寺子屋</title>
     <link href='src/assets/bootstrap/css/bootstrap.min.css' rel='stylesheet' />
     <link href='style.css' rel='stylesheet' />
+    <meta content='website' property='og:type' />
+    <meta content='http://rails.terakoya.io/' property='og:url' />
+    <meta content='Rails寺子屋' property='og:title' />
+    <meta content='Rails寺子屋' property='og:site_name' />
+    <meta content='Rails寺子屋はWebアプリを作るための強力なツール&amp;quot;Ruby on Rails&amp;quot;を使ってWebアプリ作りを実践しながら学ぶイベントです。' property='og:description' />
+    <meta content='http://rails.terakoya.io/src/assets/images/ogp_logo.png' property='og:image' />
   </head>
   <body>
     <div class='navbar navbar-fixed-top'>
