Convert ひらがな to 漢字

--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@
                 <a href='https://twitter.com/igaiga555'>@igaiga555</a>
                 <h4>大和田 純</h4>
                 <a href='https://twitter.com/june29'>@june29</a>
-                <h4>佐々木 けいすけ</h4>
+                <h4>佐々木 佳祐</h4>
                 <a href='https://twitter.com/RooandQoo'>@RooandQoo</a>
                 <h4>西嶋 悠貴</h4>
                 <a href='https://twitter.com/yuki24'>@yuki24</a>
               </div>
               <div class='span3'>
-                <h4>藤原 ゆうや</h4>
+                <h4>藤原 裕也</h4>
                 <a href='https://twitter.com/asonas'>@asonas</a>
                 <h4>三浦 彩</h4>
                 <a href='https://twitter.com/mitaku'>@mitaku</a>
