Adjust view on smartphone

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang='ja'>
   <head>
     <meta charset='utf-8' />
-    <meta content='width=device-width, initial-scale=1.0 user-scalable=no' name='viewport' />
+    <meta content='width=device-width, initial-scale=1.0, user-scalable=yes' name='viewport' />
     <title>Rails寺子屋</title>
     <link href='src/assets/bootstrap/css/bootstrap.min.css' rel='stylesheet' />
     <link href='style.css' rel='stylesheet' />
