--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset='utf-8' />
     <meta content='width=device-width, initial-scale=1.0, user-scalable=yes' name='viewport' />
     <title>Rails寺子屋</title>
-    <link href='src/assets/bootstrap/css/bootstrap.min.css' rel='stylesheet' />
+    <link href='src/assets/bootstrap/css/bootstrap.css' rel='stylesheet' />
+    <link href='src/assets/fontawesome/css/font-awesome.css' rel='stylesheet' />
     <link href='style.css' rel='stylesheet' />
     <meta content='website' property='og:type' />
     <meta content='http://rails.terakoya.io/' property='og:url' />
