--- a/index.html
+++ b/index.html
@@ -15,107 +15,290 @@
     <meta content='http://rails.terakoya.io/src/assets/images/ogp_logo.png' property='og:image' />
   </head>
   <body>
-    <div class='navbar navbar-fixed-top'>
-      <div class='navbar-inner'>
-        <div class='container'>
-          <a class='btn btn-navbar' data-target='.nav-collapse' data-toggle='collapse'>
-            <span class='icon-bar'></span>
-            <span class='icon-bar'></span>
-            <span class='icon-bar'></span>
-          </a>
-          <a class='brand' href='/'>
-            Rails寺子屋
-          </a>
-        </div>
-      </div>
-    </div>
     <div class='container'>
       <div class='content'>
-        <div class='row'>
+        <h1>
           <img src='src/assets/images/logo.jpg' />
-        </div>
-        <div class='row'>
-          <div class='span12'>
-            <h2>
-              Rails寺子屋とは
-            </h2>
-            <p>
-              Rails寺子屋はWebアプリを作るための強力なツール"Ruby on Rails"を使ってWebアプリ作りを実践しながら学ぶイベントです。日頃からRailsを使って開発している師範（コーチ）と、ほかの参加者のみなさんと、一緒にWebアプリ作りをはじめてみませんか。
-            </p>
-          </div>
-        </div>
-        <div class='row'>
-          <div class='span6'>
-            <h3>
-              Rails寺子屋 x 高専カンファレンス
-            </h3>
+        </h1>
+        <h2>
+          Rails寺子屋 x Kosenconfについて
+        </h2>
+        <div class='about clearfix'>
+          <h3>
+            趣意書
+          </h3>
+          <p>
+            Rails寺子屋はWebアプリを作るための強力なツール"Ruby on Rails"を使ってWebアプリ作りを実践しながら学ぶイベントです。日頃からRailsを使って開発している師範（コーチ）と、ほかの参加者のみなさんと、一緒にWebアプリ作りをはじめてみませんか。
+          </p>
+          <div class='left-box'>
             <h3>
               日時
             </h3>
-            2013/3/23(土) 10:00 開始予定
-            <h3>
-              会場
-            </h3>
-            未定(東京近郊)
-            <h3>
-              時間割
-            </h3>
-            未定
+            <p>
+              2013/3/23(土) 10:00 開始予定
+            </p>
             <h3>
               参加対象者
             </h3>
-            高専学生、卒業生、教職員
+            <p>
+              高専学生 卒業生 教職員
+            </p>
+            <h3>
+              会場
+            </h3>
+            <p>
+              未定
+            </p>
           </div>
-          <div class='span6'>
+          <div class='right-box clearfix'>
             <h3>
               参加登録
             </h3>
-            <button class='btn btn-large btn-primary disabled' type='button'>門を叩く</button>
-            <span class='muted'>(準備中)</span>
-            <br />
+            <p>
+              <button class='btn btn-large btn-primary disabled' type='button'>門を叩く</button>
+              <span class='muted'>(準備中)</span>
+            </p>
             <h3>
-              よくある質問
+              時間割
             </h3>
-            <h5>参加費はどのくらいかかりますか？</h5>
-            無料です。申し込むときにはわくわくした気持ちだけあればいいです。
-            <h5>当日までにやっておくと良いことはありますか？</h5>
-            特にありません。当日、忘れ物をしないようにして下さい！
-            <h5>プログラミングの経験があります。手伝うことはできますか？</h5>
-            Rails寺子屋は師範になれる人を捜しています。いずれかの師範までご連絡ください。
-            <h3>
-              師範
-            </h3>
-            <div class='row'>
-              <div class='span3'>
-                <h4>五十嵐 邦明</h4>
-                <a href='https://twitter.com/igaiga555'>@igaiga555</a>
-                <h4>大和田 純</h4>
-                <a href='https://twitter.com/june29'>@june29</a>
-                <h4>佐々木 佳祐</h4>
-                <a href='https://twitter.com/RooandQoo'>@RooandQoo</a>
-                <h4>西嶋 悠貴</h4>
-                <a href='https://twitter.com/yuki24'>@yuki24</a>
-              </div>
-              <div class='span3'>
-                <h4>藤原 裕也</h4>
-                <a href='https://twitter.com/asonas'>@asonas</a>
-                <h4>三浦 彩</h4>
-                <a href='https://twitter.com/mitaku'>@mitaku</a>
-                <h4>村田 賢太</h4>
-                <a href='https://twitter.com/mrkn'>@mrkn</a>
-              </div>
-            </div>
-            <h3>
-              題字
-            </h3>
-            <div class='row'>
-              <div class='span3'>
-                <h4>さいとう かずよし</h4>
-                <a href='https://twitter.com/kazuyoshi'>@kazuyoshi</a>
-              </div>
+            <div class='time-table'>
+              未定（午前10時頃から夕方まで、その後は懇親会の予定で検討中です。）
+              <!-- %table.table.table-striped -->
+              <!-- %tr -->
+              <!-- %td -->
+              <!-- 10:00 -->
+              <!-- %td -->
+              <!-- 開始 -->
             </div>
           </div>
         </div>
+        <h2>
+          コースについて
+        </h2>
+        <div class='courses clearfix'>
+          <div class='course'>
+            <h3>
+              蕾組
+            </h3>
+            <description>
+              Rails未経験者向けのコースです。Rubyやその他の言語でのプログラミング経験は問いません。Railsでかんたんなアプリを作ります。
+            </description>
+          </div>
+          <div class='course'>
+            <h3>
+              華組
+            </h3>
+            <description>
+              Rails経験者向けのコースです。Rails の技量を高めたい方のコースです。コーチと一緒に課題となるRailsアプリを考え、作ります。
+            </description>
+          </div>
+          <div class='course'>
+            <h3>
+              光組
+            </h3>
+            <description>
+              教職員向けのコースです。内容は蕾組と同程度を予定しています。
+            </description>
+          </div>
+        </div>
+        <h2>
+          師範(コーチ)
+        </h2>
+        <div class='masters clearfix'>
+          <div class='master'>
+            <div class='icon'>
+              <img src='https://si0.twimg.com/profile_images/2775085674/aacc6da0f43115bb2e60878e10a92377.jpeg' width='75' />
+            </div>
+            <div class='name'>
+              五十嵐 邦明 @igaiga555
+            </div>
+            <ul class='clearfix'>
+              <li>
+                <a class='link' href='http://twitter.com/igaiga555'>
+                  <i class='icon-twitter'></i>
+                </a>
+              </li>
+              <li>
+                <a class='link' href='http://facebook.com/kuniaki.igarashi'>
+                  <i class='icon-facebook'></i>
+                </a>
+              </li>
+            </ul>
+            <div class='description'>
+              株式会社万葉のrailsエンジニア。群馬高専卒業。一橋大学非常勤講師(ruby, rails)。著書に「スタートアップruby」。tokyu.rb, asakusa.rb所属。高専カンファレンス014東京実行委員長。em高専カンファレンスvol.1編集長。
+            </div>
+          </div>
+          <div class='master'>
+            <div class='icon'>
+              <img src='https://si0.twimg.com/profile_images/2492166253/pufry2sqh7y0zw1c3u1b.jpeg' width='75' />
+            </div>
+            <div class='name'>
+              村田 賢太 @mrkn
+            </div>
+            <ul class='clearfix'>
+              <li>
+                <a class='link' href='http://twitter.com/mrkn'>
+                  <i class='icon-twitter'></i>
+                </a>
+              </li>
+            </ul>
+            <div class='description'>
+              苫小牧高専情報工学科および旭川高専専攻科生産システム工学専攻を卒業後、北海道大学大学院情報科学研究科にて複雑ネットワークと同期現象の研究に従事し、2009年に学位を取得。その後札幌市内の医療系ベンチャー企業に就職し、システムエンジニアとして日々を過ごす。2010年2月、CRuby のコミッタに就任。2011年12月、クックパッド株式会社へ転職。現在、クックパッドの開発基盤エンジニアとして、毎日の料理を楽しくし心からの笑顔を世界中に広げるために働いている。
+            </div>
+          </div>
+          <div class='master'>
+            <div class='icon'>
+              <img src='https://si0.twimg.com/profile_images/2942332207/dd1501287df208056e6edb8b1514b84a.jpeg' width='75' />
+            </div>
+            <div class='name'>
+              大和田 純 @june29
+            </div>
+            <ul class='clearfix'>
+              <li>
+                <a class='link' href='http://twitter.com/june29'>
+                  <i class='icon-twitter'></i>
+                </a>
+              </li>
+            </ul>
+            <div class='description'>
+              釧路高専情報工学科卒業。北海道生まれ少年漫画育ちのWebアプリケーション開発者。Ruby札幌に出会ってからは、日常の中で愛用する手になじむ道具としてRubyを選び続けている。「RubyKaigi」や「高専カンファレンス」の運営に関わったり、雑誌「WEB+DB PRESS」の連載をしたりと、源氏名「june29」で活動中。尊敬する人物は荒木飛呂彦先生。
+            </div>
+          </div>
+          <div class='master'>
+            <div class='icon'>
+              <img src='https://si0.twimg.com/profile_images/1465459377/5494314_707716410.jpg' width='75' />
+            </div>
+            <div class='name'>
+              西嶋 悠貴 @yuki24
+            </div>
+            <ul class='clearfix'>
+              <li>
+                <a class='link' href='http://twitter.com/yuki24'>
+                  <i class='icon-twitter'></i>
+                </a>
+              </li>
+              <li>
+                <a class='link' href='http://facebook.com/yuki24'>
+                  <i class='icon-facebook'></i>
+                </a>
+              </li>
+              <li>
+                <a class='link' href='http://github.com/yuki24'>
+                  <i class='icon-github'></i>
+                </a>
+              </li>
+            </ul>
+            <div class='description'>
+              木更津高専情報工学科卒業。これまで、Ruby on Rails や Kaminari 等 Ruby で書かれたものをはじめ、多くのオープンソースプロジェクトへ貢献。高専時代は大の英語嫌いだったが、フィリピンに1年程滞在する過程で克服。
+            </div>
+          </div>
+          <div class='master'>
+            <div class='icon'>
+              <img src='https://si0.twimg.com/profile_images/3082568461/b1467e012995dfc062ddae096e02de12.png' width='75' />
+            </div>
+            <div class='name'>
+              佐々木 佳祐 @RooandQoo
+            </div>
+            <ul class='clearfix'>
+              <li>
+                <a class='link' href='http://twitter.com/rooandqoo'>
+                  <i class='icon-twitter'></i>
+                </a>
+              </li>
+              <li>
+                <a class='link' href='http://facebook.com/rooandqoo'>
+                  <i class='icon-facebook'></i>
+                </a>
+              </li>
+              <li>
+                <a class='link' href='http://github.com/rooandqoo'>
+                  <i class='icon-github'></i>
+                </a>
+              </li>
+            </ul>
+            <div class='description'>
+              釧路高専 20期情報工学科卒業。電気通信大学の院に通いつつピクシブ株式会社にてアルバイトに勤しむ。普段はAndroidのアプリケーション開発をしていて、Ruby/Railsは目下勉強中。高専カンファレンスを始めとした楽しい催し物とクラブミュージックが好き。
+            </div>
+          </div>
+          <div class='master'>
+            <div class='icon'>
+              <img src='https://si0.twimg.com/profile_images/328365018/3411179234_d31d01f498_b.jpg' width='75' />
+            </div>
+            <div class='name'>
+              三浦 彩 @mitaku
+            </div>
+            <ul class='clearfix'>
+              <li>
+                <a class='link' href='http://twitter.com/mitaku'>
+                  <i class='icon-twitter'></i>
+                </a>
+              </li>
+              <li>
+                <a class='link' href='http://github.com/mitaku'>
+                  <i class='icon-github'></i>
+                </a>
+              </li>
+            </ul>
+            <div class='description'>
+              株式会社オプティムのRailsエバンジェリスト。高専カンファレンスなどの開催をしている。雨が嫌いで、怠け者。Rubyで素数を数えて落ち着く
+            </div>
+          </div>
+          <div class='master last'>
+            <div class='icon'>
+              <img src='https://si0.twimg.com/profile_images/1489032359/__________2011-08-11_9.48.06.png' width='75' />
+            </div>
+            <div class='name'>
+              藤原 裕也 @asonas
+            </div>
+            <ul class='clearfix'>
+              <li>
+                <a class='link' href='http://twitter.com/asonas'>
+                  <i class='icon-twitter'></i>
+                </a>
+              </li>
+              <li>
+                <a class='link' href='http://facebook.com/asonas.P'>
+                  <i class='icon-facebook'></i>
+                </a>
+              </li>
+              <li>
+                <a class='link' href='http://github.com/asonas'>
+                  <i class='icon-github'></i>
+                </a>
+              </li>
+            </ul>
+            <div class='description'>
+              津山工業高等専門学校 電気電子工学科を修了後、武蔵野美術大学の通信学部に通いデザインを学ぶ。2010年に京都で行われた高専カンファレンスに感化され、今はスタートアップ系Web男子として日々を邁進。高専カンファレンスやTech系勉強会などによく出現する。
+            </div>
+          </div>
+        </div>
+        <h3>
+          題字
+        </h3>
+        <div class='calligrapher'>
+          <div class='icon'>
+            <img src='https://si0.twimg.com/profile_images/1720785107/my_bigger.png' width='75' />
+          </div>
+          <div class='name'>
+            さいとうかずよし
+          </div>
+          <ul class='clearfix'>
+            <li>
+              <a class='link' href='http://twitter.com/kazuyoshi'>
+                <i class='icon-twitter'></i>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <h3>
+          よくある質問
+        </h3>
+        <h4>参加費はどのくらいかかりますか？</h4>
+        無料です。申し込むときにはわくわくした気持ちだけあればいいです。
+        <h4>当日までにやっておくと良いことはありますか？</h4>
+        特にありません。当日、忘れ物をしないようにして下さい！
+        <h4>プログラミングの経験があります。手伝うことはできますか？</h4>
+        Rails寺子屋は師範になれる人を捜しています。いずれかの師範までご連絡ください。
       </div>
       <footer>
         <span></span>
