Unify profile format

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
               </li>
             </ul>
             <div class='description'>
-              株式会社オプティムのRailsエバンジェリスト。高専カンファレンスなどの開催をしている。雨が嫌いで、怠け者。Rubyで素数を数えて落ち着く
+              株式会社オプティムのRailsエバンジェリスト。高専カンファレンスなどの開催をしている。雨が嫌いで、怠け者。Rubyで素数を数えて落ち着く。
             </div>
           </div>
           <div class='master last'>
