Place is around Tokyo

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               会場
             </h3>
             <p>
-              未定
+              未定(東京近郊)
             </p>
           </div>
           <div class='right-box clearfix'>
