--- a/index.html
+++ b/index.html
@@ -15,11 +15,14 @@
     <meta content='http://rails.terakoya.io/src/assets/images/ogp_logo.png' property='og:image' />
   </head>
   <body>
+    <header>
+      <div class='container'>
+        <h1 class='logo'></h1>
+        <img src='src/assets/images/logo.png' />
+      </div>
+    </header>
     <div class='container'>
       <div class='content'>
-        <h1>
-          <img src='src/assets/images/logo.jpg' />
-        </h1>
         <h2>
           Rails寺子屋 x Kosenconfについて
         </h2>
@@ -31,36 +34,37 @@
             Rails寺子屋はWebアプリを作るための強力なツール"Ruby on Rails"を使ってWebアプリ作りを実践しながら学ぶイベントです。日頃からRailsを使って開発している師範（コーチ）と、ほかの参加者のみなさんと、一緒にWebアプリ作りをはじめてみませんか。
           </p>
           <div class='left-box'>
-            <h3>
+            <h4>
               日時
-            </h3>
+            </h4>
             <p>
               2013/3/23(土) 10:00 開始予定
             </p>
-            <h3>
+            <h4>
               参加対象者
-            </h3>
+            </h4>
             <p>
               高専学生 卒業生 教職員
             </p>
-            <h3>
+            <h4>
               会場
-            </h3>
+            </h4>
             <p>
               未定(東京近郊)
             </p>
           </div>
           <div class='right-box clearfix'>
-            <h3>
+            <h4>
               参加登録
-            </h3>
+            </h4>
             <p>
-              <button class='btn btn-large btn-primary disabled' type='button'>門を叩く</button>
-              <span class='muted'>(準備中)</span>
+              <a href='https://docs.google.com/spreadsheet/viewform?formkey=dGc2RmRwWk43ZjZlNWl4Xy1PVXRrNVE6MQ'>
+                <button class='btn btn-large btn-primary' type='button'>門を叩く</button>
+              </a>
             </p>
-            <h3>
+            <h4>
               時間割
-            </h3>
+            </h4>
             <div class='time-table'>
               未定（午前10時頃から夕方まで、その後は懇親会の予定で検討中です。）
               <!-- %table.table.table-striped -->
@@ -78,6 +82,7 @@
         <div class='courses clearfix'>
           <div class='course'>
             <h3>
+              <img class='shadow tsubomi' src='src/assets/images/tsubomi.png' />
               蕾組
             </h3>
             <description>
@@ -86,6 +91,7 @@
           </div>
           <div class='course'>
             <h3>
+              <img class='shadow hana' src='src/assets/images/hana.png' />
               華組
             </h3>
             <description>
@@ -94,6 +100,7 @@
           </div>
           <div class='course'>
             <h3>
+              <img class='shadow hikari' src='src/assets/images/hikari.png' />
               光組
             </h3>
             <description>
@@ -107,7 +114,7 @@
         <div class='masters clearfix'>
           <div class='master'>
             <div class='icon'>
-              <img src='https://si0.twimg.com/profile_images/2775085674/aacc6da0f43115bb2e60878e10a92377.jpeg' width='75' />
+              <img class='shadow' src='https://si0.twimg.com/profile_images/2775085674/aacc6da0f43115bb2e60878e10a92377.jpeg' width='75' />
             </div>
             <div class='name'>
               五十嵐 邦明 @igaiga555
@@ -123,6 +130,11 @@
                   <i class='icon-facebook'></i>
                 </a>
               </li>
+              <li>
+                <a class='link' href='http://github.com/igaiga'>
+                  <i class='icon-github'></i>
+                </a>
+              </li>
             </ul>
             <div class='description'>
               株式会社万葉のrailsエンジニア。群馬高専卒業。一橋大学非常勤講師(ruby, rails)。著書に「スタートアップruby」。tokyu.rb, asakusa.rb所属。高専カンファレンス014東京実行委員長。em高専カンファレンスvol.1編集長。
@@ -130,7 +142,7 @@
           </div>
           <div class='master'>
             <div class='icon'>
-              <img src='https://si0.twimg.com/profile_images/2492166253/pufry2sqh7y0zw1c3u1b.jpeg' width='75' />
+              <img class='shadow' src='https://si0.twimg.com/profile_images/2492166253/pufry2sqh7y0zw1c3u1b.jpeg' width='75' />
             </div>
             <div class='name'>
               村田 賢太 @mrkn
@@ -141,6 +153,16 @@
                   <i class='icon-twitter'></i>
                 </a>
               </li>
+              <li>
+                <a class='link' href='http://facebook.com/mrkn720'>
+                  <i class='icon-facebook'></i>
+                </a>
+              </li>
+              <li>
+                <a class='link' href='http://github.com/mrkn'>
+                  <i class='icon-github'></i>
+                </a>
+              </li>
             </ul>
             <div class='description'>
               苫小牧高専情報工学科および旭川高専専攻科生産システム工学専攻を卒業後、北海道大学大学院情報科学研究科にて複雑ネットワークと同期現象の研究に従事し、2009年に学位を取得。その後札幌市内の医療系ベンチャー企業に就職し、システムエンジニアとして日々を過ごす。2010年2月、CRuby のコミッタに就任。2011年12月、クックパッド株式会社へ転職。現在、クックパッドの開発基盤エンジニアとして、毎日の料理を楽しくし心からの笑顔を世界中に広げるために働いている。
@@ -148,7 +170,7 @@
           </div>
           <div class='master'>
             <div class='icon'>
-              <img src='https://si0.twimg.com/profile_images/2942332207/dd1501287df208056e6edb8b1514b84a.jpeg' width='75' />
+              <img class='shadow' src='https://si0.twimg.com/profile_images/2942332207/dd1501287df208056e6edb8b1514b84a.jpeg' width='75' />
             </div>
             <div class='name'>
               大和田 純 @june29
@@ -159,6 +181,21 @@
                   <i class='icon-twitter'></i>
                 </a>
               </li>
+              <li>
+                <a class='link' href='http://facebook.com/june29.jp'>
+                  <i class='icon-facebook'></i>
+                </a>
+              </li>
+              <li>
+                <a class='link' href='http://github.com/june29'>
+                  <i class='icon-github'></i>
+                </a>
+              </li>
+              <li>
+                <a class='link' href='http://june29.jp'>
+                  <i class='icon-home'></i>
+                </a>
+              </li>
             </ul>
             <div class='description'>
               釧路高専情報工学科卒業。北海道生まれ少年漫画育ちのWebアプリケーション開発者。Ruby札幌に出会ってからは、日常の中で愛用する手になじむ道具としてRubyを選び続けている。「RubyKaigi」や「高専カンファレンス」の運営に関わったり、雑誌「WEB+DB PRESS」の連載をしたりと、源氏名「june29」で活動中。尊敬する人物は荒木飛呂彦先生。
@@ -166,7 +203,7 @@
           </div>
           <div class='master'>
             <div class='icon'>
-              <img src='https://si0.twimg.com/profile_images/1465459377/5494314_707716410.jpg' width='75' />
+              <img class='shadow' src='https://si0.twimg.com/profile_images/1465459377/5494314_707716410.jpg' width='75' />
             </div>
             <div class='name'>
               西嶋 悠貴 @yuki24
@@ -194,7 +231,7 @@
           </div>
           <div class='master'>
             <div class='icon'>
-              <img src='https://si0.twimg.com/profile_images/3082568461/b1467e012995dfc062ddae096e02de12.png' width='75' />
+              <img class='shadow' src='https://si0.twimg.com/profile_images/3082568461/b1467e012995dfc062ddae096e02de12.png' width='75' />
             </div>
             <div class='name'>
               佐々木 佳祐 @RooandQoo
@@ -222,7 +259,7 @@
           </div>
           <div class='master'>
             <div class='icon'>
-              <img src='https://si0.twimg.com/profile_images/328365018/3411179234_d31d01f498_b.jpg' width='75' />
+              <img class='shadow' src='https://si0.twimg.com/profile_images/328365018/3411179234_d31d01f498_b.jpg' width='75' />
             </div>
             <div class='name'>
               三浦 彩 @mitaku
@@ -231,6 +268,11 @@
               <li>
                 <a class='link' href='http://twitter.com/mitaku'>
                   <i class='icon-twitter'></i>
+                </a>
+              </li>
+              <li>
+                <a class='link' href='http://facebook.com/takumi.miura.9'>
+                  <i class='icon-facebook'></i>
                 </a>
               </li>
               <li>
@@ -245,7 +287,7 @@
           </div>
           <div class='master last'>
             <div class='icon'>
-              <img src='https://si0.twimg.com/profile_images/1489032359/__________2011-08-11_9.48.06.png' width='75' />
+              <img class='shadow' src='https://si0.twimg.com/profile_images/1489032359/__________2011-08-11_9.48.06.png' width='75' />
             </div>
             <div class='name'>
               藤原 裕也 @asonas
@@ -266,39 +308,81 @@
                   <i class='icon-github'></i>
                 </a>
               </li>
+              <li>
+                <a class='link' href='http://asonas.jp'>
+                  <i class='icon-home'></i>
+                </a>
+              </li>
             </ul>
             <div class='description'>
               津山工業高等専門学校 電気電子工学科を修了後、武蔵野美術大学の通信学部に通いデザインを学ぶ。2010年に京都で行われた高専カンファレンスに感化され、今はスタートアップ系Web男子として日々を邁進。高専カンファレンスやTech系勉強会などによく出現する。
             </div>
           </div>
         </div>
-        <h3>
-          題字
-        </h3>
-        <div class='calligrapher'>
-          <div class='icon'>
-            <img src='https://si0.twimg.com/profile_images/1720785107/my_bigger.png' width='75' />
+        <h2>
+          助っ人
+        </h2>
+        <div class='collaborators clearfix'>
+          <div class='calligrapher'>
+            <span class='role'>
+              題字
+            </span>
+            <div class='icon'>
+              <img class='shadow' src='https://si0.twimg.com/profile_images/1720785107/my_bigger.png' width='75' />
+            </div>
+            <div class='name'>
+              さいとうかずよし
+            </div>
+            <ul class='clearfix'>
+              <li>
+                <a class='link' href='http://twitter.com/kazuyoshi'>
+                  <i class='icon-twitter'></i>
+                </a>
+              </li>
+            </ul>
           </div>
-          <div class='name'>
-            さいとうかずよし
+          <div class='designer'>
+            <span class='role'>
+              絵師
+            </span>
+            <div class='icon'>
+              <img class='shadow' src='http://a0.twimg.com/profile_images/3049823344/b89478d5d99dbaee208000b505c5677c.png' width='75' />
+            </div>
+            <div class='name'>
+              あらなぎ
+            </div>
+            <ul class='clearfix'>
+              <li>
+                <a class='link' href='http://twitter.com/aranagi'>
+                  <i class='icon-twitter'></i>
+                </a>
+              </li>
+            </ul>
           </div>
-          <ul class='clearfix'>
-            <li>
-              <a class='link' href='http://twitter.com/kazuyoshi'>
-                <i class='icon-twitter'></i>
-              </a>
-            </li>
-          </ul>
         </div>
-        <h3>
+        <h2>
           よくある質問
-        </h3>
-        <h4>参加費はどのくらいかかりますか？</h4>
-        無料です。申し込むときにはわくわくした気持ちだけあればいいです。
-        <h4>当日までにやっておくと良いことはありますか？</h4>
-        特にありません。当日、忘れ物をしないようにして下さい！
-        <h4>プログラミングの経験があります。手伝うことはできますか？</h4>
-        Rails寺子屋は師範になれる人を捜しています。いずれかの師範までご連絡ください。
+        </h2>
+        <div class='faqs'>
+          <div class='question'>
+            Q. 参加費はどのくらいかかりますか？
+          </div>
+          <div class='answer'>
+            A. 無料です。申し込むときにはわくわくした気持ちだけあればいいです。
+          </div>
+          <div class='question'>
+            Q. 当日までにやっておくと良いことはありますか？
+          </div>
+          <div class='answer'>
+            A. 特にありません。当日、忘れ物をしないようにして下さい！
+          </div>
+          <div class='question'>
+            Q. プログラミングの経験があります。手伝うことはできますか？
+          </div>
+          <div class='answer'>
+            A. Rails寺子屋は師範になれる人を捜しています。いずれかの師範までご連絡ください。
+          </div>
+        </div>
       </div>
       <footer>
         <span></span>
