--- a/index.html
+++ b/index.html
@@ -55,9 +55,17 @@
             <h4>
               会場
             </h4>
-            <p>
-              未定(東京近郊)
-            </p>
+            <div id='venue'>
+              <a href='http://www.optim.co.jp/'>
+                <strong>株式会社オプティム</strong>
+              </a>
+              <a href='http://www.optim.co.jp/access'>(アクセス)</a>
+              <br />
+              <span class='address'>東京都港区港南1丁目6−34 品川イースト1階 (受付)</span>
+              <br />
+              <span>最寄り駅: JR品川駅</span>
+            </div>
+            <div id='map'></div>
           </div>
           <div class='right-box clearfix'>
             <h4>
@@ -397,4 +405,7 @@
   </body>
   <script src='src/assets/jquery-1.8.3.min.js'></script>
   <script src='src/assets/bootstrap/js/bootstrap.min.js'></script>
+  <script src='https://maps.google.com/maps/api/js?sensor=true'></script>
+  <script src='src/assets/gmaps.js'></script>
+  <script src='src/assets/app.js'></script>
 </html>
