--- a/index.html
+++ b/index.html
@@ -56,14 +56,16 @@
               会場
             </h4>
             <div id='venue'>
-              <a href='http://www.optim.co.jp/'>
-                <strong>株式会社オプティム</strong>
-              </a>
-              <a href='http://www.optim.co.jp/access'>(アクセス)</a>
-              <br />
-              <span class='address'>東京都港区港南1丁目6−34 品川イースト1階 (受付)</span>
-              <br />
-              <span>最寄り駅: JR品川駅</span>
+              <address>
+                <a href='http://www.optim.co.jp/'>
+                  <strong>株式会社オプティム</strong>
+                </a>
+                <a href='http://www.optim.co.jp/access'>(アクセス)</a>
+                <br />
+                <span class='address'>東京都港区港南1丁目6−34 品川イースト1階 (受付)</span>
+                <br />
+                <span>最寄り駅: JR品川駅</span>
+              </address>
             </div>
             <div id='map'></div>
           </div>
@@ -72,9 +74,9 @@
               参加登録
             </h4>
             <p>
-              <a href='https://docs.google.com/spreadsheet/viewform?formkey=dGc2RmRwWk43ZjZlNWl4Xy1PVXRrNVE6MQ'>
-                <button class='btn btn-large btn-primary' type='button'>門を叩く</button>
-              </a>
+              <a class='btn btn-large btn-primary' href='https://docs.google.com/spreadsheet/viewform?formkey=dGc2RmRwWk43ZjZlNWl4Xy1PVXRrNVE6MQ'>門を叩く</a>
+              <br />
+              <span class='deadline label label-important'>応募締め切り: 2013/1/31(木) 23:59</span>
             </p>
             <h4>
               時間割
