Modify css (limit date)

--- a/index.html
+++ b/index.html
@@ -75,8 +75,7 @@
             </h4>
             <p>
               <a class='btn btn-large btn-primary' href='https://docs.google.com/spreadsheet/viewform?formkey=dGc2RmRwWk43ZjZlNWl4Xy1PVXRrNVE6MQ'>門を叩く</a>
-              <br />
-              <span class='deadline label label-important'>応募締め切り: 2013/1/31(木) 23:59</span>
+              <div class='deadline'>応募締め切り: 2013/1/31(木) 23:59</div>
             </p>
             <h4>
               時間割
