--- a/index.html
+++ b/index.html
@@ -74,8 +74,7 @@
               参加登録
             </h4>
             <p>
-              <a class='btn btn-large btn-primary' href='https://docs.google.com/spreadsheet/viewform?formkey=dGc2RmRwWk43ZjZlNWl4Xy1PVXRrNVE6MQ'>門を叩く</a>
-              <div class='deadline'>応募締め切り: 2013/1/31(木) 23:59</div>
+              <span>参加応募は〆切ました。予定数を上回る参加応募をいただきました。選考を行いまして、結果を2/23までにご連絡いたします。</span>
             </p>
             <h4>
               時間割
