--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               日時
             </h4>
             <p>
-              2013/3/23(土) 10:00 開始予定
+              2013/3/23(土) 10:00 開始(9:30分開場)
             </p>
             <h4>
               参加対象者
@@ -62,6 +62,8 @@
                 </a>
                 <a href='http://www.optim.co.jp/access'>(アクセス)</a>
                 <br />
+                <a href='http://g.co/maps/t382x'>大きな地図で見る</a>
+                <br />
                 <span class='address'>東京都港区港南1丁目6−34 品川イースト1階 (受付)</span>
                 <br />
                 <span>最寄り駅: JR品川駅</span>
@@ -77,16 +79,69 @@
               <span>参加応募は〆切ました。予定数を上回る参加応募をいただきました。選考を行いまして、結果を2/23までにご連絡いたします。</span>
             </p>
             <h4>
+              当日の持ち物
+            </h4>
+            <div class='equipment'>
+              <p>
+                お弁当とPCを持参してください。
+                <br />
+                詳しくは2月17日に送りましたメールを御覧ください。
+              </p>
+            </div>
+            <h4>
               時間割
             </h4>
             <div class='time-table'>
-              未定（午前10時頃から夕方まで、その後は懇親会の予定で検討中です。）
-              <!-- %table.table.table-striped -->
-              <!-- %tr -->
-              <!-- %td -->
-              <!-- 10:00 -->
-              <!-- %td -->
-              <!-- 開始 -->
+              <table class='table table-striped'>
+                <tr>
+                  <td>
+                    9:30
+                  </td>
+                  <td>
+                    開場
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    10:00 - 12:00
+                  </td>
+                  <td>
+                    環境構築
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    12:00 - 13:00
+                  </td>
+                  <td>
+                    ランチ
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    13:00 - 17:00
+                  </td>
+                  <td>
+                    ワークショップ
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    17:00 - 19:00
+                  </td>
+                  <td>
+                    懇親会
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    19:00
+                  </td>
+                  <td>
+                    解散
+                  </td>
+                </tr>
+              </table>
             </div>
           </div>
         </div>
