Add profile (@sora_h and @nobuyuki)

--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
               株式会社オプティムのRailsエバンジェリスト。高専カンファレンスなどの開催をしている。雨が嫌いで、怠け者。Rubyで素数を数えて落ち着く。
             </div>
           </div>
-          <div class='master last'>
+          <div class='master'>
             <div class='icon'>
               <img class='shadow' src='https://si0.twimg.com/profile_images/1489032359/__________2011-08-11_9.48.06.png' width='75' />
             </div>
@@ -385,6 +385,57 @@
             </ul>
             <div class='description'>
               津山工業高等専門学校 電気電子工学科を修了後、武蔵野美術大学の通信学部に通いデザインを学ぶ。2010年に京都で行われた高専カンファレンスに感化され、今はスタートアップ系Web男子として日々を邁進。高専カンファレンスやTech系勉強会などによく出現する。
+            </div>
+          </div>
+          <div class='master'>
+            <div class='icon'>
+              <img class='shadow' src='https://twimg0-a.akamaihd.net/profile_images/3022880518/d4a92c61fdb0ee77fb6d29ed644581b7_bigger.png' width='75' />
+            </div>
+            <div class='name'>
+              そらは @sora_h
+            </div>
+            <ul class='clearfix'>
+              <li>
+                <a class='link' href='http://twitter.com/sora_h'>
+                  <i class='icon-twitter'></i>
+                </a>
+              </li>
+              <li>
+                <a class='link' href='http://github.com/sorah'>
+                  <i class='icon-github'></i>
+                </a>
+              </li>
+              <li>
+                <a class='link' href='http://sorah.jp'>
+                  <i class='icon-home'></i>
+                </a>
+              </li>
+            </ul>
+            <div class='description'>
+              クックパッドで開発基盤エンジニアをしている中卒 Rubyist, Ruby コミッタ。こわくないです。
+            </div>
+          </div>
+          <div class='master last'>
+            <div class='icon'>
+              <img class='shadow' src='https://fbcdn-profile-a.akamaihd.net/hprofile-ak-ash3/c170.50.621.621/s200x200/602757_389226921172381_1750948442_n.jpg' width='75' />
+            </div>
+            <div class='name'>
+              本多 展幸 @nobuyuki
+            </div>
+            <ul class='clearfix'>
+              <li>
+                <a class='link' href='https://twitter.com/nobyuki'>
+                  <i class='icon-twitter'></i>
+                </a>
+              </li>
+              <li>
+                <a class='link' href='https://www.facebook.com/nobyuki.h'>
+                  <i class='icon-facebook'></i>
+                </a>
+              </li>
+            </ul>
+            <div class='description'>
+              株式会社ネットワーク応用通信研究所のRailsエンジニア。生粋の福岡県人だったが、Rubyで仕事がしたくて松江にIターン。趣味は釣りと料理と積読。ちなみに、高専卒ではない。
             </div>
           </div>
         </div>
