Add nobyuki's github account

--- a/index.html
+++ b/index.html
@@ -429,6 +429,11 @@
                 </a>
               </li>
               <li>
+                <a class='link' href='http://github.com/nobyuki'>
+                  <i class='icon-github'></i>
+                </a>
+              </li>
+              <li>
                 <a class='link' href='https://www.facebook.com/nobyuki.h'>
                   <i class='icon-facebook'></i>
                 </a>
