Modify twitter account name

--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
               <img class='shadow' src='https://fbcdn-profile-a.akamaihd.net/hprofile-ak-ash3/c170.50.621.621/s200x200/602757_389226921172381_1750948442_n.jpg' width='75' />
             </div>
             <div class='name'>
-              本多 展幸 @nobuyuki
+              本多 展幸 @nobyuki
             </div>
             <ul class='clearfix'>
               <li>
