Add profile (@_a__san)

--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
               クックパッドで開発基盤エンジニアをしている中卒 Rubyist, Ruby コミッタ。こわくないです。
             </div>
           </div>
-          <div class='master last'>
+          <div class='master'>
             <div class='icon'>
               <img class='shadow' src='https://fbcdn-profile-a.akamaihd.net/hprofile-ak-ash3/c170.50.621.621/s200x200/602757_389226921172381_1750948442_n.jpg' width='75' />
             </div>
@@ -441,6 +441,38 @@
             </ul>
             <div class='description'>
               株式会社ネットワーク応用通信研究所のRailsエンジニア。生粋の福岡県人だったが、Rubyで仕事がしたくて松江にIターン。趣味は釣りと料理と積読。ちなみに、高専卒ではない。
+            </div>
+          </div>
+          <div class='master last'>
+            <div class='icon'>
+              <img class='shadow' src='https://twimg0-a.akamaihd.net/profile_images/3064291628/70f869b4ea94a85744370d1f378ea1e8_bigger.png' width='75' />
+            </div>
+            <div class='name'>
+              青山 昂平 @_a__san
+            </div>
+            <ul class='clearfix'>
+              <li>
+                <a class='link' href='http://twitter.com/_a__san'>
+                  <i class='icon-twitter'></i>
+                </a>
+              </li>
+              <li>
+                <a class='link' href='https://www.facebook.com/aoyama.kohei'>
+                  <i class='icon-facebook'></i>
+                </a>
+              </li>
+              <li>
+                <a class='link' href='http://github.com/akoruka'>
+                  <i class='icon-github'></i>
+                </a>
+              </li>
+            </ul>
+            <div class='description'>
+              福井工業高等専門学校 電子情報工学科を飛び出してそのまま上京してきたプログラマーっぽい人
+              <br />
+              自称ゆるふわガチ勢
+              <br />
+              こわい人こわいです
             </div>
           </div>
         </div>
