--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
               株式会社ネットワーク応用通信研究所のRailsエンジニア。生粋の福岡県人だったが、Rubyで仕事がしたくて松江にIターン。趣味は釣りと料理と積読。ちなみに、高専卒ではない。
             </div>
           </div>
-          <div class='master last'>
+          <div class='master'>
             <div class='icon'>
               <img class='shadow' src='https://twimg0-a.akamaihd.net/profile_images/3064291628/70f869b4ea94a85744370d1f378ea1e8_bigger.png' width='75' />
             </div>
@@ -473,6 +473,34 @@
               自称ゆるふわガチ勢
               <br />
               こわい人こわいです
+            </div>
+          </div>
+          <div class='master last'>
+            <div class='icon'>
+              <img class='shadow' src='https://twimg0-a.akamaihd.net/profile_images/1296753997/image.jpg' width='75'>
+            </div>
+            <div class='name'>
+              成田 一生 @mirakui
+            </div>
+            <ul class='clearfix'>
+              <li>
+                <a class='link' href='http://twitter.com/mirakui'>
+                  <i class='icon-twitter'></i>
+                </a>
+              </li>
+              <li>
+                <a class='link' href='https://www.facebook.com/mirakui'>
+                  <i class='icon-facebook'></i>
+                </a>
+              </li>
+              <li>
+                <a class='link' href='http://github.com/mirakui'>
+                  <i class='icon-github'></i>
+                </a>
+              </li>
+            </ul>
+            <div class='description'>
+              クックパッドで働くインフラエンジニア。主に Rails アプリケーションのパフォーマンス改善を担当。技術評論社 WEB+DB PRESS Vol.70に「Rails高速化特集」を書きました。出身高専は豊田高専情報工学科。好きな動物はパンダ。
             </div>
           </div>
         </div>
