--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
               こわい人こわいです
             </div>
           </div>
-          <div class='master last'>
+          <div class='master'>
             <div class='icon'>
               <img class='shadow' src='https://twimg0-a.akamaihd.net/profile_images/1296753997/image.jpg' width='75'>
             </div>
@@ -501,6 +501,24 @@
             </ul>
             <div class='description'>
               クックパッドで働くインフラエンジニア。主に Rails アプリケーションのパフォーマンス改善を担当。技術評論社 WEB+DB PRESS Vol.70に「Rails高速化特集」を書きました。出身高専は豊田高専情報工学科。好きな動物はパンダ。
+            </div>
+          </div>
+          <div class='master last'>
+            <div class='icon'>
+              <img class='shadow' src='https://si0.twimg.com/profile_images/1491871238/kengo05_bigger.png' width='75' />
+            </div>
+            <div class='name'>
+              濱崎 健吾 @hmsk
+            </div>
+            <ul class='clearfix'>
+              <li>
+              <a class='link' href='http://twitter.com/hmsk'>
+                <i class='icon-twitter'></i>
+              </a>
+              </li>
+            </ul>
+            <div class='description'>
+              北九州高専制御情報工学科卒業。五十嵐さんが講師の講義のティーチングアシスタント。
             </div>
           </div>
         </div>
